# parameter-golf

parameter-golf-rs/: Cargo.toml
parameter-golf-rs/crates/pg-bench/: Cargo.toml
parameter-golf-rs/crates/pg-compat/src/: lib.rs  loader.rs  parity.rs  writer.rs
parameter-golf-rs/crates/pg-core/src/: nccl.rs  tensor.rs
parameter-golf-rs/crates/pg-data/src/: token_stream.rs
parameter-golf-rs/crates/pg-eval/src/: gpu_lora_ttt.rs  lact.rs  lib.rs  qttt.rs  sliding.rs  slot.rs
parameter-golf-rs/crates/pg-kernels/: build.rs
parameter-golf-rs/crates/pg-kernels/cpp/: cudnn_sdpa.cu  sdpa.cu
parameter-golf-rs/crates/pg-kernels/src/: attention.rs  complementary.rs  cross_entropy.rs  flash_attn.rs  fusion.rs  gemm.rs  gpu_kernels.rs  lib.rs  smear_gate.rs
parameter-golf-rs/crates/pg-model/src/: arch.rs  backward.rs  config.rs  gpu.rs  lib.rs  model.rs  plan.rs  spec.rs
parameter-golf-rs/crates/pg-optim/src/: gpu.rs  muon.rs
parameter-golf-rs/crates/pg-quant/src/: export.rs  lib.rs  prune.rs  scheme.rs
parameter-golf-rs/crates/pg-train/src/: lib.rs  main.rs
parameter-golf-rs/deploy/: Dockerfile  modal_deploy.py  run_detached.py
parameter-golf-rs/specs/: frontier_sp8192_target.toml
records/track_non_record_16mb/2026-04-30_RustCudaSystems/: PR_BODY.md  README.md
